--- a/about-me.ipynb
+++ b/about-me.ipynb
@@ -20,26 +20,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! My name is Vera Pinto. I’m excited to learn because I am interested to Keep my skills up-to-date in Data Analytics. A fun fact about me is: I like doing yoga and cycling.\n"
+     ]
+    }
+   ],
    "source": [
     "# About Me\n",
     "# Please fill in the following details.\n",
     "\n",
-    "name = \"Your Name Here\"\n",
-    "reason = \"Why you are interested in AI, Data Analytics, or Data Science\"\n",
-    "fun_fact = \"One fun fact about yourself or a goal for this course\"\n",
+    "name = \"Vera Pinto\"\n",
+    "reason = \"I am interested to Keep my skills up-to-date in Data Analytics\"\n",
+    "fun_fact = \"I like doing yoga and cycling\"\n",
     "\n",
     "print(f\"Hi! My name is {name}. I’m excited to learn because {reason}. A fun fact about me is: {fun_fact}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "anaconda-panel-2023.05-py310",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda-panel-2023.05-py310-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -51,9 +66,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
